<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardUseCompatPadding="true"
    tools:context="com.tamtam.android.tamtam.fragments.RecordPriceFragment">

    <android.support.v7.widget.LinearLayoutCompat
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record_price_fragment_ask_price"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/fragment_record_price_price_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/edit_text_minimum_height"
            android:minWidth="@dimen/edit_text_minimum_width"
            android:textAlignment="center"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:hint="@string/record_price_fragment_price_text_hint"
            android:imeOptions="actionNext"
            android:imeActionLabel="@string/record_price_fragment_keyboard_ok"
            tools:text="15.21 $" />

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.CardView>