<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardUseCompatPadding="true"
    tools:context="com.tamtam.android.tamtam.fragments.RecordPriceFragment">

    <android.support.v7.widget.LinearLayoutCompat
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record_position_fragment_ask_position"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/fragment_record_postion_longitude_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/edit_text_minimum_height"
            android:minWidth="@dimen/edit_text_minimum_width"
            android:textAlignment="center"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:hint="@string/record_position_fragment_longitude_text_hint"
            android:imeOptions="actionNext"
            tools:text="longitude" />

        <EditText
        android:id="@+id/fragment_record_postion_latitude_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/edit_text_minimum_height"
        android:minWidth="@dimen/edit_text_minimum_width"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:hint="@string/record_position_fragment_latitude_text_hint"
        android:imeOptions="actionNext"
        tools:text="latitude" />

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.CardView>