<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="200dp"

    app:cardUseCompatPadding="true"
    tools:context="com.tamtam.android.tamtam.fragments.RecordDescriptionFragment">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.LinearLayoutCompat
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:minHeight="@dimen/edit_text_minimum_height"
                android:text="@string/record_description_fragment_ask_description"
                android:textAlignment="center" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/fragment_record_description_validate_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:minHeight="@dimen/button_minimum_height"
                android:minWidth="@dimen/button_minimum_height"
                android:text="@string/record_description_fragment_button_text"
                android:textAllCaps="true" />
        </android.support.v7.widget.LinearLayoutCompat>

        <EditText
            android:id="@+id/fragment_record_description_description_et"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:gravity="start|top"
            android:hint="@string/record_description_fragment_description_text_hint"
            android:inputType="textMultiLine|textImeMultiLine"
            android:maxLines="7"
            android:minHeight="100dp"
            android:minLines="2"
            android:minWidth="@dimen/edit_text_minimum_width"
            tools:text="This is an amazing thing blablabla..." />


    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.CardView>